@@ -1,3 +1,12 @@
+2023-07-20T16:09:45Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5613347273 # 1024
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-20
+* notice: last 14d: unq all: 14 4611
+* notice: prev accum: outdated-unq outdated-all / unq all: 1534 140472 / 1588 145333
+* notice: next accum: outdated-unq outdated-all / unq all: 1534 140472 / 1588 145428
+* notice: prev exec diff / last date diff / accum: unq all: +0 +95 -1 -146 / +2 +206 -0 -0 / 2 206
+* notice: removed / changed dates: [] / [2023-07-06 2023-07-20]
+
 2023-07-20T08:10:27Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5608510655 # 1023
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-20
